--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
-    <title>Login Page - The Service</title>
+    <title>ArtPicts - Login</title>
   </head>
   <body>
     <nav>
